Closed Bug 335107 Opened 19 years ago Closed 19 years ago

Dashed/dotted borders on very tall elements produce vertical stripes

Categories

(Core :: Graphics, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: jruderman, Assigned: vlad)

References

()

Details

(Keywords: testcase)

Attachments

(3 files)

Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a1) Gecko/20060421 Minefield/3.0a1 http://en.wikipedia.org/wiki/Wikipedia:Bad_Jokes_and_Other_Deleted_Nonsense/ASCII_cows has blue vertical stripes covering most of the page. Minimal testcase coming up.
Attached file reduced testcase
Even though the testcase is very similar to that of bug 286898, I think this is a regression from Thebes/Cairo because I can't reproduce the bug with a trunk build from March 2005.
Flags: blocking1.9a1?
Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060423 Minefield/3.0a1 On Linux too.
OS: Windows XP → All
Flags: blocking1.9a1? → blocking1.9a1+
*** Bug 339496 has been marked as a duplicate of this bug. ***
ConditionRect wasn't properly handling too-large x/y coordinates. I hope noone has a display resolution bigger than 32000x32000 or so...
Assignee: nobody → vladimir
Status: NEW → ASSIGNED
Attachment #224615 - Flags: review?(pavlov)
Attachment #224615 - Flags: review?(pavlov) → review+
checked in
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: