b=335107, dashed/dotted borders on very tall elements produce vertical stripes, r=vlad